<resources>
    <string name="app_name">MoviesApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="favorites">Favorites</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="released_date">Released Date :</string>
    <string name="genre">Genre</string>
    <string name="artemis_title">Artemis Fowl</string>
    <string name="artemis_overview">With the help of his loyal protector Butler, 12-year-old genius Artemis Fowl, descendant of a long line of criminal masterminds, seeks to find his mysteriously disappeared father, and in doing so, uncovers an ancient, underground civilization—the amazingly advanced world of fairies. Deducing that his father’s disappearance is somehow connected to the secretive, reclusive fairy world, cunning Artemis concocts a dangerous plan—so dangerous that he ultimately finds himself in a perilous war of wits with the all-powerful fairies.</string>
    <string name="artemis_release_date">2020-06-12</string>
    <string name="artemis_genre">Fantasy</string>
    <string name="astra_title">Ad Astra</string>
    <string name="astra_overview">The near future, a time when both hope and hardships drive humanity to look to the stars and beyond. While a mysterious phenomenon menaces to destroy life on planet Earth, astronaut Roy McBride undertakes a mission across the immensity of space and its many perils to uncover the truth about a lost expedition that decades before boldly faced emptiness and silence in search of the unknown.</string>
    <string name="astra_release_date">2019-09-17</string>
    <string name="astra_genre">Drama</string>
    <string name="sonic_title">Sonic the Hedgehog</string>
    <string name="sonic_overview">Based on the global blockbuster videogame franchise from Sega, Sonic the Hedgehog tells the story of the world’s speediest hedgehog as he embraces his new home on Earth. In this live-action adventure comedy, Sonic and his new best friend team up to defend the planet from the evil genius Dr. Robotnik and his plans for world domination.</string>
    <string name="sonic_release_date">2020-02-12</string>
    <string name="sonic_genre">Action</string>
    <string name="da5bloods_title">Da 5 Bloods</string>
    <string name="da5_bloods_overview">Four African-American Vietnam veterans return to Vietnam. They are in search of the remains of their fallen squad leader and the promise of buried treasure. These heroes battle forces of humanity and nature while confronted by the lasting ravages of the immorality of the Vietnam War.</string>
    <string name="da5blood_date">2020-06-12</string>
    <string name="da5blood_genre">Drama</string>
    <string name="joker_title">Joker</string>
    <string name="joker_overview">During the 1980s, a failed stand-up comedian is driven insane and turns to a life of crime and chaos in Gotham City while becoming an infamous psychopathic crime figure.</string>
    <string name="joker_release_date">2019-10-02</string>
    <string name="joker_genre">Action</string>
    <string name="hunt_title">The Hunt</string>
    <string name="hunt_overview">Twelve strangers wake up in a clearing. They don\'t know where they are—or how they got there. In the shadow of a dark internet conspiracy theory, ruthless elitists gather at a remote location to hunt humans for sport. But their master plan is about to be derailed when one of the hunted turns the tables on her pursuers.</string>
    <string name="hunt_release_date">2020-0-3-11</string>
    <string name="hunt_genre">Thriller</string>
    <string name="prey_title">Birds Of Prey</string>
    <string name="prey_overview">Harley Quinn joins forces with a singer, an assassin and a police detective to help a young girl who had a hit placed on her after she stole a rare diamond from a crime lord.</string>
    <string name="prey_release_date">2020-02-05</string>
    <string name="prey_genre">Comedy</string>
    <string name="hobit_title">The Hobit</string>
    <string name="hobit_overview">Immediately after the events of The Desolation of Smaug, Bilbo and the dwarves try to defend Erebor\'s mountain of treasure from others who claim it: the men of the ruined Laketown and the elves of Mirkwood. Meanwhile an army of Orcs led by Azog the Defiler is marching on Erebor, fueled by the rise of the dark lord Sauron. Dwarves, elves and men must unite, and the hope for Middle-Earth falls into Bilbo\'s hands.</string>
    <string name="hobit_release_date">2014-12-10</string>
    <string name="hobit_genre">Fantasy</string>
    <string name="britt_title">Britt-Marie Was Here</string>
    <string name="britt_overview">Britt-Marie, a woman in her sixties, decides to leave her husband and start anew. Having been housewife for most of her life and and living in small backwater town of Borg, there isn\'t many jobs available and soon she finds herself fending a youth football team.</string>
    <string name="britt_genre">Comedy</string>
    <string name="avenger_title">The Avengers</string>
    <string name="avenger_overview">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</string>
    <string name="avenger_release_date">2018-04-25</string>
    <string name="avenger_genre">Thriller</string>
    <string name="unlike">You Unliked %1$s</string>
    <string name="like">You Liked %1$s</string>
    <string name="no_like">You have not liked any Movie</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="profile_image">Profile Image</string>
    <string name="logout">Logout</string>
    <string name="user_cannot_be_empty">Username cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="usser_cant_be_less_than_5">username cannot be less than 5</string>
    <string name="password_check">\"password must contain upper and lower case letters, numbers and should not be less thean 8 and should not contain space, \"</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search">Search</string>
    <string name="not_found">title not found</string>
    <string name="delete_message">movie deleted</string>
    <string name="profile">Profile</string>
</resources>
