<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movies.MovieDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/movie_poster_height"
            android:layout_marginTop="@dimen/padding_standard"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop"
            android:src="@drawable/the_hobbit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_standard"
            android:textSize="@dimen/eighteen_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_poster"
            tools:text="Movie Title" />

        <TextView
            android:id="@+id/release_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_standard"
            android:text="@string/released_date"
            android:textSize="@dimen/eighteen_sp"
            app:layout_constraintEnd_toStartOf="@id/release_date"
            app:layout_constraintStart_toStartOf="@id/movie_poster"
            app:layout_constraintTop_toBottomOf="@id/genre_tv" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/eighteen_sp"
            app:layout_constraintEnd_toEndOf="@id/movie_poster"
            app:layout_constraintStart_toEndOf="@id/release_date_tv"
            app:layout_constraintTop_toBottomOf="@id/genre"
            tools:text="Drama" />

        <TextView
            android:id="@+id/genre_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_standard"
            android:text="@string/genre"
            android:textSize="@dimen/eighteen_sp"
            app:layout_constraintEnd_toStartOf="@id/genre"
            app:layout_constraintStart_toStartOf="@id/movie_poster"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/eighteen_sp"
            app:layout_constraintEnd_toEndOf="@id/movie_poster"
            app:layout_constraintStart_toEndOf="@id/genre_tv"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="22-5-20" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_standard"
            android:layout_marginEnd="@dimen/padding_standard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/release_date_tv"
            tools:text="22-5-20" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favorite_btn"
            android:layout_margin="@dimen/padding_standard"
            android:src="@drawable/ic_favorite_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>